test/success/integration/_succ_let_stmts_4.hs
main = do
       let x :: Int
           x = 3
       print "hello"