test/fail/integration/_fail_grammar_expr_let_1.hs
x :: Int
x = let in 3
main = print "hello"